# amnesia

./: Cargo.toml  LICENSE  README.md
claude/: CLAUDE.md
claude/skills/amnesia/: SKILL.md
skills/amnesia/: SKILL.md
src/: bm25.rs  config.rs  filter.rs  launcher.rs  main.rs  model.rs  projects.rs  sessions.rs  store.rs  tui.rs
src/commands/: encrypt.rs  get.rs  install.rs  migrate.rs  mod.rs  projects.rs  recent.rs  save.rs  search.rs  sessions.rs  stats.rs
src/templates/: agents_md_snippet.md  claude_md_snippet.md  opencode_skill.md
src/tui/: app.rs  events.rs  ui.rs
