[package]
name = "amnesia"
version = "0.1.0"
edition = "2024"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
ulid       = "1"
chrono     = "0.4"
clap       = { version = "4", features = ["derive"] }
ratatui    = "0.29"
crossterm  = "0.28"
age        = "0.11"

[[bin]]
name = "amnesia"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
